# qkrt-nav

./: .gitignore  PKG-INFO  README.md  context.txt  frames_2025-10-16_20.16.27.gv  frames_2025-10-18_14.09.12.gv  frames_2025-10-30_14.16.21.gv  frames_2026-01-07_21.12.14.gv  frames_2026-01-15_16.00.44.gv  frames_2026-01-22_16.41.19.gv  package.xml  setup.py
.github/workflows/: block-direct-push.yml
install/: local_setup.sh  setup.sh
install/sentry_description/share/ament_index/resource_index/package_run_dependencies/: sentry_description
install/sentry_description/share/ament_index/resource_index/parent_prefix_path/: sentry_description
install/sentry_description/share/sentry_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/sentry_description/share/sentry_description/cmake/: sentry_descriptionConfig-version.cmake  sentry_descriptionConfig.cmake
install/sentry_description/share/sentry_description/environment/: ament_prefix_path.dsv  path.dsv
install/sentry_description/share/sentry_description/launch/: display.launch.py  display_rviz.launch.py
install/sentry_description/share/sentry_description/src/description/: sentry_description.urdf
install/test/share/test/: package.sh
log/: latest_build
src/: README.md  frames_2025-10-30_14.44.09.gv
src/qkrt_imu/: package.xml  setup.cfg  setup.py
src/qkrt_imu/qkrt_imu/: imu_listener.py  imu_publisher.py  imu_republisher.py
src/sentry_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/sentry_bringup/config/: amcl.yaml  global_costmap.yaml  inflation_layer.yaml  laser_merger.yaml  local_costmap.yaml  map_server.yaml  master_costmap.yaml  obstacle_layer.yaml  rplidar_a1.yaml  rplidar_a1_1.yaml  rplidar_a1_2.yaml  sentry_map.yaml  static_layer.yaml  voxel_layer
src/sentry_bringup/launch/: bringup.launch.py  display.launch.py  laser_merger.launch.py  minimal_mcb_test.launch.py  minimal_mcb_test2.launch.py  real_robot.launch.py  simulated_robot.launch.py
src/sentry_bringup/scripts/: laser_merger.py
src/sentry_communication/: package.xml  setup.cfg  setup.py
src/sentry_communication/sentry_communication/: async_io.py  comm_hub.py  event_driven.py  log.txt  threaded_blocking_read.py
src/sentry_communication/sentry_communication/communication/: CRC.py  Message.py  Receive.py  Serial.py  __init__.py
src/sentry_description/: CMakeLists.txt  package.xml
src/sentry_description/launch/: display.launch.py  gazebo.launch.py
src/sentry_description/meshes/: 2026_ARC_3v3_simplified.stl
src/sentry_description/models/Apriltag36_11_00000/: model.sdf
src/sentry_description/models/Apriltag36_11_00000/materials/scripts/: Apriltag.material
src/sentry_description/rviz/: display_config.rviz  sentry_config.rviz
src/sentry_description/src/description/: sentry_description.urdf
src/sentry_description/urdf/: robot_onshapetourdf.urdf.xacro  sentry_description.urdf  sentry_description.urdf.xacro  sentry_description_prev.urdf  sentry_description_prev1.urdf  sentry_description_v2.urdf.xacro
src/sentry_description/worlds/: comp_map.sdf  my_world.sdf  vex__test_world.sdf
src/sentry_drivers/: CMakeLists.txt  package.xml  read_sensor_data.py
src/sentry_drivers/config/: sensor_publisher.yaml
src/sentry_drivers/launch/: drivers.launch.py
src/sentry_drivers/scripts/: sensor_publisher.py
src/sentry_localization/: CMakeLists.txt  package.xml
src/sentry_localization/config/: amcl.yaml  ekf.yaml  sentry_map.yaml  slam_toolbox.yaml
src/sentry_localization/launch/: global_localization.launch.py  local_localization.launch.py  mapping.launch.py
src/sentry_localization/maps/: keepout_mask.yaml  sentry_map.yaml  sim_map.pgm  sim_map.yaml
src/sentry_localization/scripts/: imu_turret_compensator.py  sim_comm_hub_bridge.py
src/sentry_mission/: CMakeLists.txt  package.xml
src/sentry_mission/behavior_trees/: mission_tree.xml
src/sentry_mission/include/sentry_mission/: health_above.hpp  health_below.hpp  navigate_center.hpp  navigate_home.hpp
src/sentry_mission/launch/: mission.launch.py
src/sentry_mission/src/: health_above.cpp  health_below.cpp  mission_executor.cpp  navigate_center.cpp  navigate_home.cpp
src/sentry_navigation/: CMakeLists.txt  package.xml
src/sentry_navigation/behavior_tree/: health_based_nav_simple.xml  health_based_nav_with_recovery.xml  navigate_to_pose_w_replanning.xml  simple_navigation.xml
src/sentry_navigation/config/: behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  costmap.yaml  planner_server.yaml  smoother_server.yaml
src/sentry_navigation/launch/: navigation.launch.py
src/sentry_vision/: README.md  package.xml  setup.cfg  setup.py
src/sentry_vision/launch/: vision.launch.py
src/sentry_vision/sentry_vision/: apriltag_detector.py
src/test/: package.xml
