<?xml version="1.0"?>
<package format="3">
  <name>sentry_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for NAV2 parameters of the Sentry robot</description>
  <maintainer email="23qm34@queensu.ca">noah</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_localization</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
